--- a/package.json
+++ b/package.json
@@ -12,15 +12,34 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.3",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
+    "@angular/material": "^2.0.0-beta.2",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.0.2",
     "@angular/router": "^4.0.0",
+    "@swimlane/ngx-datatable": "^6.3.0",
+    "@types/c3": "^0.4.41",
+    "angular2-busy": "https://github.com/dinusuresh/angular2-busy.git",
+    "angular2-datatable": "^0.6.0",
+    "angular2-flash-messages": "^1.0.7",
+    "angular2-infinite-scroll": "^0.3.5",
+    "angular2-modal": "^2.0.3",
+    "angular2-notifications": "^0.4.53",
+    "bootstrap": "^3.3.7",
+    "c3": "^0.4.11",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.2.1",
+    "moment": "^2.18.1",
+    "ng2-charts": "^1.5.0",
+    "primeng": "^4.0.0-rc.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
