--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@angular/core": "^4.1.3",
     "@angular/forms": "^4.1.3",
     "@angular/http": "^4.1.3",
+    "@angular/material": "^2.0.0-beta.6",
     "@angular/platform-browser": "^4.1.3",
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/platform-server": "^4.1.3",
     "@angular/router": "^4.1.3",
     "core-js": "^2.4.1",
+    "moment": "^2.18.1",
     "rxjs": "^5.1.0",
     "typescript": "^2.3.4",
     "zone.js": "^0.8.4"
