--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/platform-server": "^4.1.3",
     "@angular/router": "^4.1.3",
+    "angular2-modal": "^2.0.3",
     "c3": "^0.4.13",
     "core-js": "^2.4.1",
     "moment": "^2.18.1",
+    "ngx-dropzone-wrapper": "^4.0.3",
     "rxjs": "^5.1.0",
     "typescript": "^2.3.4",
     "zone.js": "^0.8.4"
