--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@angular/core": "^4.1.3",
     "@angular/forms": "^4.1.3",
     "@angular/http": "^4.1.3",
-    "@angular/material": "^2.0.0-beta.6",
+    "@angular/material": "^2.0.0-beta.7",
     "@angular/platform-browser": "^4.1.3",
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/platform-server": "^4.1.3",
     "@angular/router": "^4.1.3",
+    "angular2-datatable": "^0.6.0",
     "angular2-modal": "^2.0.3",
     "c3": "^0.4.13",
     "core-js": "^2.4.1",
