--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "core-js": "^2.4.1",
     "moment": "^2.18.1",
     "ngx-dropzone-wrapper": "^4.0.3",
-    "rxjs": "^5.1.0",
-    "typescript": "^2.3.4",
+    "rxjs": "5.1.0",
+    "typescript": "2.3.4",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.2",
+    "@angular/cli": "^1.1.3",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
