--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.4.1",
     "moment": "^2.18.1",
     "ngx-dropzone-wrapper": "^4.0.3",
+    "ngx-pagination": "^3.0.1",
     "rxjs": "5.1.0",
     "typescript": "2.3.4",
     "zone.js": "^0.8.4"
