--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "^4.1.3",
     "@angular/router": "^4.1.3",
     "angular2-datatable": "^0.6.0",
+    "angular2-infinite-scroll": "^0.3.5",
     "angular2-modal": "^2.0.3",
     "c3": "^0.4.13",
     "core-js": "^2.4.1",
