--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "c3": "^0.4.13",
     "core-js": "^2.4.1",
     "moment": "^2.18.1",
+    "ng2-slider-component": "^1.0.9",
     "ngx-dropzone-wrapper": "^4.0.3",
     "ngx-pagination": "^3.0.1",
     "rxjs": "5.1.0",
