--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/platform-server": "^4.1.3",
     "@angular/router": "^4.1.3",
+    "@types/jquery": "^3.2.7",
     "angular2-datatable": "^0.6.0",
     "angular2-infinite-scroll": "^0.3.5",
     "angular2-modal": "^2.0.3",
     "c3": "^0.4.13",
+    "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "ng2-slider-component": "^1.0.9",
     "ngx-dropzone-wrapper": "^4.0.3",
