--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.1.3",
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/compiler-cli": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
+    "@angular/animations": "^4.1.3",
+    "@angular/common": "^4.1.3",
+    "@angular/compiler": "^4.1.3",
+    "@angular/compiler-cli": "^4.1.3",
+    "@angular/core": "^4.1.3",
+    "@angular/forms": "^4.1.3",
+    "@angular/http": "^4.1.3",
     "@angular/material": "2.0.0-beta.7",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@angular/platform-server": "4.1.3",
-    "@angular/router": "4.1.3",
+    "@angular/platform-browser": "^4.1.3",
+    "@angular/platform-browser-dynamic": "^4.1.3",
+    "@angular/platform-server": "^4.1.3",
+    "@angular/router": "^4.1.3",
     "angular2-datatable": "^0.6.0",
     "angular2-infinite-scroll": "^0.3.5",
     "angular2-modal": "^2.0.3",
@@ -31,7 +31,7 @@
     "core-js": "^2.4.1",
     "moment": "^2.18.1",
     "ng2-slider-component": "^1.0.9",
-    "ngx-dropzone-wrapper": "^4.0.3",
+    "ngx-dropzone-wrapper": "4.0.3",
     "ngx-pagination": "^3.0.1",
     "rxjs": "5.1.0",
     "typescript": "2.3.4",
