--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ng2-social-login": "^2.0.5",
     "ngx-dropzone-wrapper": "4.0.3",
     "ngx-pagination": "^3.0.1",
+    "primeng": "^4.1.3",
     "rxjs": "5.1.0",
     "typescript": "2.3.4",
     "zone.js": "0.8.4"
