--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,21 @@ production_build:
   script:
     - npm install
     - ng build --prod
-    - cd /home/gitlab-runner/builds/c30cc313/0/anonymous-coder/RotoProsWeb
-    - rm -rf /var/www/html/RotoProsWeb/dist
-    - cp -R /home/gitlab-runner/builds/c30cc313/0/anonymous-coder/RotoProsWeb/dist /var/www/html/RotoProsWeb/
+    # - cd /home/gitlab-runner/builds/ffbe2209/0/anonymous-coder/RotoProsWeb
+    # - rm -rf /var/www/html/RotoProsWeb/dist
+    # - cp -R /home/gitlab-runner/builds/ffbe2209/0/anonymous-coder/RotoProsWeb/dist /var/www/html/RotoProsWeb/
   tags:
-    - DFS
+    - ROTOPROS
+
+production_dev_build:
+  stage: dev_build
+  only:
+    - staging
+  script:
+    - npm install
+    - ng build --prod
+    # - cd /home/gitlab-runner/builds/03bf9824/0/anonymous-coder/RotoProsWeb
+    # - rm -rf /var/www/html/RotoProsWeb/dist
+    # - cp -R /home/gitlab-runner/builds/03bf9824/0/anonymous-coder/RotoProsWeb/dist /var/www/html/RotoProsWeb/
+  tags:
+    - RP
