--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
-    "ng2-slider-component": "^1.0.9",
-    "ng2-social-login": "^2.0.5",
+    "ng2-slider-component": "1.0.9",
+    "ng2-social-login": "2.0.5",
     "ngx-dropzone-wrapper": "4.0.3",
-    "ngx-pagination": "^3.0.1",
+    "ngx-pagination": "3.0.1",
     "primeng": "^4.1.3",
     "rxjs": "5.1.0",
     "typescript": "2.3.4",
