--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ production_build:
   stage: build
   only:
     - master
+  tags:
+    - ROTOPROS
   script:
     - npm install
     - ng build --prod
