--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/forms": "4.1.3",
     "@angular/http": "4.1.3",
     "@angular/material": "2.0.0-beta.7",
-    "@angular/platform-browser": "4.1.3",
+    "@angular/platform-browser": "^4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
     "@angular/platform-server": "4.1.3",
     "@angular/router": "4.1.3",
@@ -50,6 +50,7 @@
     "jasny-bootstrap": "^3.1.3",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
+    "ng2-meta": "github:vinaygopinath/ng2-meta",
     "ng2-slider-component": "1.0.9",
     "ng2-social-login": "2.0.5",
     "ngx-dropzone-wrapper": "4.0.3",
