--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "roto-pros-web",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -8,7 +8,14 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:client-and-server-bundles": "ng build --prod && ng build --prod --app 1 --output-hashing=false",
+    "build:prerender": "npm run build:client-and-server-bundles && npm run webpack:server && npm run generate:prerender",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
+    "generate:prerender": "cd dist && node prerender",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:prerender": "cd dist/browser && http-server",
+    "serve:ssr": "node dist/server"
   },
   "private": true,
   "dependencies": {
@@ -20,11 +27,14 @@
     "@angular/forms": "4.1.3",
     "@angular/http": "4.1.3",
     "@angular/material": "2.0.0-beta.7",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@angular/platform-server": "4.1.3",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/platform-server": "^5.0.0",
     "@angular/router": "4.1.3",
     "@ngui/map": "^0.20.0",
+    "@nguniversal/common": "^5.0.0-beta.5",
+    "@nguniversal/express-engine": "^5.0.0-beta.5",
+    "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "@types/googlemaps": "^3.30.0",
     "@types/jquery": "^3.2.7",
     "angular2-datatable": "^0.6.0",
@@ -64,11 +74,14 @@
     "zone.js": "0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.2.4",
+    "@angular/cli": "^1.7.1",
     "@angular/compiler-cli": "4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "6.0.60",
     "codelyzer": "2.0.0",
+    "cpy-cli": "^1.0.1",
+    "express": "^4.15.2",
+    "http-server": "^0.10.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
     "karma": "~1.4.1",
@@ -79,6 +92,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
     "ts-node": "2.0.0",
-    "tslint": "4.5.0"
+    "ts-loader": "^2.3.7",
+    "tslint": "^5.7.0",
+    "typescript": "~2.4.2"
   }
 }
