--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.1.3",
+    "@angular/animations": "^5.0.0",
     "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
+    "@angular/compiler": "^5.0.0",
     "@angular/compiler-cli": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
     "@angular/material": "2.0.0-beta.7",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
@@ -38,7 +38,7 @@
     "@types/googlemaps": "^3.30.0",
     "@types/jquery": "^3.2.7",
     "angular2-datatable": "^0.6.0",
-    "angular2-infinite-scroll": "^0.3.5",
+    "angular2-infinite-scroll": "^0.3.43",
     "angular2-modal": "^2.0.3",
     "arrive": "^2.4.1",
     "bootstrap-notify": "^3.1.3",
@@ -50,7 +50,7 @@
     "chartist": "^0.11.0",
     "chartist-plugin-zoom": "^0.4.1",
     "chartjs-plugin-zoom": "^0.5.0",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.3",
     "datatables": "^1.10.13",
     "datatables.net-bs": "^1.10.16",
     "datatables.net-responsive": "^2.2.0",
@@ -75,7 +75,7 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.7.1",
-    "@angular/compiler-cli": "4.0.0",
+    "@angular/compiler-cli": "^5.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "6.0.60",
     "codelyzer": "2.0.0",
