--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ production_build:
     - ROTOPROS
   script:
     - npm install
-    - ng build --prod
+    - ng build --prod -extract-css false
     - cd /home/ubuntu/builds/ffbe2209/0/anonymous-coder/RotoProsWeb
     - rm -rf /var/www/html/RotoProsWeb/dist
     - cp -R /home/ubuntu/builds/ffbe2209/0/anonymous-coder/RotoProsWeb/dist /var/www/html/RotoProsWeb/
@@ -24,7 +24,7 @@ production_dev_build:
     - staging
   script:
     - npm install
-    - ng build --prod --env=dev
+    - ng build --prod --env=dev -extract-css false
     - cd /home/gitlab-runner/builds/03bf9824/0/anonymous-coder/RotoProsWeb
     - rm -rf /var/www/html/RotoProsWeb/dist
     - cp -R /home/gitlab-runner/builds/03bf9824/0/anonymous-coder/RotoProsWeb/dist /var/www/html/RotoProsWeb/
