--- a/package.json
+++ b/package.json
@@ -60,12 +60,14 @@
     "rxjs": "5.1.0",
     "twitter-bootstrap-wizard": "^1.2.0",
     "typescript": "2.3.4",
+    "videogular2": "^6.0.8",
     "web-animations-js": "^2.3.1",
     "zone.js": "0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "^1.2.4",
     "@angular/compiler-cli": "4.0.0",
+    "@types/core-js": "^0.9.46",
     "@types/jasmine": "2.5.38",
     "@types/node": "6.0.60",
     "codelyzer": "2.0.0",
