--- a/package.json
+++ b/package.json
@@ -12,34 +12,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.1.3",
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/compiler-cli": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/material": "2.0.0-beta.7",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@angular/platform-server": "4.1.3",
-    "@angular/router": "4.1.3",
-    "@ngui/map": "^0.20.0",
+    "@angular/animations": "^6.0.0",
+    "@angular/cdk": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/material": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/platform-server": "^6.0.0",
+    "@angular/router": "^6.0.0",
     "@types/googlemaps": "^3.30.0",
     "@types/jquery": "^3.2.7",
-    "angular2-datatable": "^0.6.0",
-    "angular2-infinite-scroll": "^0.3.5",
-    "angular2-modal": "^2.0.3",
     "arrive": "^2.4.1",
     "bootstrap-notify": "^3.1.3",
     "bootstrap-select": "^1.12.4",
     "bootstrap-switch": "^3.3.4",
     "bootstrap-tagsinput": "^0.7.1",
-    "c3": "^0.4.13",
+    "c3": "^0.5.4",
     "chart.js": "^2.6.0",
     "chartist": "^0.11.0",
     "chartist-plugin-zoom": "^0.4.1",
     "chartjs-plugin-zoom": "^0.5.0",
+    "codelyzer": "^4.3.0",
     "core-js": "^2.4.1",
     "datatables": "^1.10.13",
     "datatables.net-bs": "^1.10.16",
@@ -47,39 +45,43 @@
     "easy-pie-chart": "^2.1.7",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "fullcalendar": "^3.7.0",
+    "jasmine": "^3.1.0",
     "jasny-bootstrap": "^3.1.3",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
-    "ng2-meta": "github:vinaygopinath/ng2-meta",
     "ng2-slider-component": "1.0.9",
     "ng2-social-login": "2.0.5",
     "ngx-dropzone-wrapper": "4.0.3",
+    "ngx-infinite-scroll": "^0.8.4",
+    "ngx-modialog": "^5.0.0",
     "ngx-pagination": "3.0.1",
     "nouislider": "^10.1.0",
     "primeng": "^4.3.0",
-    "rxjs": "5.1.0",
+    "rxjs": "^6.1.0",
     "twitter-bootstrap-wizard": "^1.2.0",
-    "typescript": "2.3.4",
-    "web-animations-js": "^2.3.1",
     "zone.js": "0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.2.4",
-    "@angular/compiler-cli": "4.0.0",
+    "@angular-devkit/build-angular": "~0.5.0",
+    "@angular/cli": "6.0.0",
     "@types/core-js": "^0.9.46",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "6.0.60",
-    "codelyzer": "2.0.0",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "karma-jasmine": "~1.1.0",
+    "@types/jasmine": "~2.8.0",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/node": "^6.0.45",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~1.7.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.0",
-    "ts-node": "2.0.0",
-    "tslint": "4.5.0"
+    "karma-phantomjs-launcher": "^1.0.2",
+    "lodash": "^4.16.2",
+    "phantomjs-prebuilt": "^2.1.7",
+    "protractor": "~5.3.0",
+    "ts-loader": "^4.2.0",
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "webpack-cli": "^2.0.14"
   }
 }
