--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jasny-bootstrap": "^3.1.3",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
+    "ng2-bootstrap-modal": "^1.0.1",
     "ng2-meta": "github:vinaygopinath/ng2-meta",
     "ng2-slider-component": "1.0.9",
     "ng2-social-login": "2.0.5",
