--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bootstrap-select": "^1.12.4",
     "bootstrap-switch": "^3.3.4",
     "bootstrap-tagsinput": "^0.7.1",
+    "c3": "^0.4.23",
     "chart.js": "^2.6.0",
     "chartist": "^0.11.0",
     "chartist-plugin-zoom": "^0.4.1",
@@ -71,6 +72,7 @@
     "ngx-infinite-scroll": "^0.8.4",
     "ngx-modialog": "^5.0.0",
     "ngx-pagination": "3.0.1",
+    "nodemon": "^1.17.4",
     "nouislider": "^10.1.0",
     "primeng": "^4.3.0",
     "rxjs": "^6.1.0",
@@ -90,7 +92,7 @@
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "^2.0.2",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
