--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
             "styles": [
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/c3/c3.min.css",
               "src/assets/css/graph.css",
               "src/assets/css/bootstrap.min.css",
               "src/assets/css/stylesheet.css",
@@ -45,6 +46,7 @@
             "scripts": [
               "src/assets/js/jquery.js",
               "node_modules/moment/min/moment.min.js",
+              "node_modules/c3/c3.min.js",
               "src/assets/js/bootstrap.min.js",
               "src/assets/js/owl.carousel.min.js",
               "src/assets/js/jquery.mCustomScrollbar.concat.min.js",
