--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,28 +33,28 @@
 #     - RP
 
 
-image: docker:stable
-services:
-- docker:dind
-
-stages:
-- build
-- test
-- release
-- deploy
-
-variables:
-  CONTAINER_STAGING_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH:$CI_COMMIT_REF_NAME
-  CONTAINER_RELEASE_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH:latest
-
-before_script:
-  - docker login -u gitlab-ci-token -p kxrRs1wz4z1gs9ATNYcQ registry.gitlab.com
-
-build:
-  stage: build
-  script:
-    - docker build --pull -t $CONTAINER_STAGING_IMAGE .
-    - docker push $CONTAINER_STAGING_IMAGE
+# image: docker:stable
+# services:
+# - docker:dind
+#
+# stages:
+# - build
+# - test
+# - release
+# - deploy
+#
+# variables:
+#   CONTAINER_STAGING_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH:$CI_COMMIT_REF_NAME
+#   CONTAINER_RELEASE_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH:latest
+#
+# before_script:
+#   - docker login -u gitlab-ci-token -p kxrRs1wz4z1gs9ATNYcQ registry.gitlab.com
+#
+# build:
+#   stage: build
+#   script:
+#     - docker build --pull -t $CONTAINER_STAGING_IMAGE .
+#     - docker push $CONTAINER_STAGING_IMAGE
 
 # test1:
 #   stage: test
@@ -68,25 +68,70 @@ build:
 #     - docker pull $CONTAINER_TEST_IMAGE
 #     - docker run $CONTAINER_TEST_IMAGE /script/to/run/another/test
 
-release-image:
-  stage: release
+# release-image:
+#   stage: release
+#   script:
+#     - docker pull $CONTAINER_TEST_IMAGE
+#     - docker tag $CONTAINER_TEST_IMAGE $CONTAINER_RELEASE_IMAGE
+#     - docker push $CONTAINER_RELEASE_IMAGE
+#   only:
+#     - master
+#
+# deploy:
+#   stage: deploy
+#   script:
+#     - ./prod.sh
+#   only:
+#     - master
+#
+# deploy:
+#   stage: deploy
+#   script:
+#     - ./deploy.sh
+#   only:
+#     - angular6
+
+
+
+
+image: docker:stable
+
+stages:
+- build
+#- test
+- release
+- deploy
+
+# When using dind, it's wise to use the overlayfs driver for
+# improved performance.
+variables:
+  CONTAINER_STAGING_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH:$CI_COMMIT_REF_NAME
+  CONTAINER_RELEASE_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH:latest
+  DOCKER_DRIVER: overlay2
+
+services:
+- docker:dind
+
+before_script:
+- docker info && docker login -u gitlab-ci-token -p kxrRs1wz4z1gs9ATNYcQ registry.gitlab.com
+
+build:
+  stage: build
   script:
-    - docker pull $CONTAINER_TEST_IMAGE
-    - docker tag $CONTAINER_TEST_IMAGE $CONTAINER_RELEASE_IMAGE
-    - docker push $CONTAINER_RELEASE_IMAGE
-  only:
-    - master
+    - docker-compose down
+    - docker build --pull -t $CONTAINER_STAGING_IMAGE .
+    - docker push $CONTAINER_STAGING_IMAGE
+
+# build:
+#   stage: build
+#   script:
+#   - docker-compose down
+#   - time docker-compose build | tee docker-build.log
+#   - ./deploy.sh
 
 deploy:
   stage: deploy
   script:
-    - ./prod.sh
-  only:
-    - master
-
-deploy:
-  stage: deploy
-  script:
-    - ./deploy.sh
+    - docker-compose up
   only:
     - angular6
