--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,6 +113,9 @@ services:
 - docker:dind
 
 before_script:
+- apk add --no-cache python py2-pip
+- pip install --no-cache-dir docker-compose
+- docker-compose -v
 - docker info && docker login -u gitlab-ci-token -p kxrRs1wz4z1gs9ATNYcQ registry.gitlab.com
 
 build:
