--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,7 +105,7 @@ stages:
 # When using dind, it's wise to use the overlayfs driver for
 # improved performance.
 variables:
-  CONTAINER_STAGING_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH:$CI_COMMIT_REF_NAME
+  CONTAINER_STAGING_IMAGE: $CI_REGISTRY:$CI_COMMIT_REF_NAME
   CONTAINER_RELEASE_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH:latest
   DOCKER_DRIVER: overlay2
 
@@ -113,30 +113,31 @@ services:
 - docker:dind
 
 before_script:
-- apk add --no-cache python py2-pip
-- pip install --no-cache-dir docker-compose
-- docker-compose -v
-- docker info && docker login -u gitlab-ci-token -p kxrRs1wz4z1gs9ATNYcQ registry.gitlab.com
+# - apk add --no-cache python py2-pip
+# - pip install --no-cache-dir docker-compose
+# - docker-compose -v
+# - docker info && docker login -u gitlab-ci-token -p kxrRs1wz4z1gs9ATNYcQ registry.gitlab.com
 - echo $CONTAINER_STAGING_IMAGE
-
-build:
-  stage: build
-  script:
-    - docker-compose down
-    - time docker-compose build | tee docker-build.log
-    - docker tag rotopros-web $CONTAINER_STAGING_IMAGE
-    - docker push $CONTAINER_STAGING_IMAGE
+- echo $CI_REGISTRY
 
 # build:
 #   stage: build
 #   script:
-#   - docker-compose down
-#   - time docker-compose build | tee docker-build.log
-#   - ./deploy.sh
-
-deploy:
-  stage: deploy
-  script:
-    - docker-compose up
-  only:
-    - angular6
+#     - docker-compose down
+#     - time docker-compose build | tee docker-build.log
+#     - docker tag rotopros-web $CONTAINER_STAGING_IMAGE
+#     - docker push $CONTAINER_STAGING_IMAGE
+#
+# # build:
+# #   stage: build
+# #   script:
+# #   - docker-compose down
+# #   - time docker-compose build | tee docker-build.log
+# #   - ./deploy.sh
+#
+# deploy:
+#   stage: deploy
+#   script:
+#     - docker-compose up
+#   only:
+#     - angular6
