--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -115,10 +115,9 @@ services:
 before_script:
 # - apk add --no-cache python py2-pip
 # - pip install --no-cache-dir docker-compose
-# - docker-compose -v
-# - docker info && docker login -u gitlab-ci-token -p kxrRs1wz4z1gs9ATNYcQ registry.gitlab.com
-- echo $CONTAINER_STAGING_IMAGE
-- echo $CI_REGISTRY
+# -
+# - docker info &&  docker-compose -v && docker login -u gitlab-ci-token -p kxrRs1wz4z1gs9ATNYcQ registry.gitlab.com
+- echo $CI_REGISTRY_IMAGE
 
 build:
   stage: build
