--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,7 @@
 #   CONTAINER_RELEASE_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH:latest
 #
 # before_script:
-#   - docker login -u gitlab-ci-token -p kxrRs1wz4z1gs9ATNYcQ registry.gitlab.com
+#   - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
 #
 # build:
 #   stage: build
@@ -113,10 +113,9 @@ services:
 - docker:dind
 
 before_script:
-# - apk add --no-cache python py2-pip
-# - pip install --no-cache-dir docker-compose
-# -
-# - docker info &&  docker-compose -v && docker login -u gitlab-ci-token -p kxrRs1wz4z1gs9ATNYcQ registry.gitlab.com
+- apk add --no-cache python py2-pip
+- pip install --no-cache-dir docker-compose
+- docker info &&  docker-compose -v && docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
 - echo $CI_REGISTRY_IMAGE
 
 build:
