--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,8 +105,9 @@ stages:
 # When using dind, it's wise to use the overlayfs driver for
 # improved performance.
 variables:
-  CONTAINER_STAGING_IMAGE: $CI_REGISTRY:$CI_COMMIT_REF_NAME
-  CONTAINER_RELEASE_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH:latest
+  CONTAINER_STAGING_IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
+  CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:latest
+  CI_JOB_TOKEN: kxrRs1wz4z1gs9ATNYcQ
   DOCKER_DRIVER: overlay2
 
 services:
@@ -116,15 +117,14 @@ before_script:
 - apk add --no-cache python py2-pip
 - pip install --no-cache-dir docker-compose
 - docker info &&  docker-compose -v && docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
-- echo $CI_REGISTRY_IMAGE
 
 build:
   stage: build
   script:
     - docker-compose down
-    # - time docker-compose build | tee docker-build.log
-    # - docker tag rotopros-web $CONTAINER_STAGING_IMAGE
-    # - docker push $CONTAINER_STAGING_IMAGE
+    - time docker-compose build | tee docker-build.log
+    - docker tag rotopros-web $CONTAINER_STAGING_IMAGE
+    - docker push $CONTAINER_STAGING_IMAGE
 #
 # # build:
 # #   stage: build
@@ -136,6 +136,6 @@ build:
 deploy:
   stage: deploy
   script:
-    - docker-compose down
+    - docker-compose up
   only:
     - angular6
