--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,7 +113,7 @@ services:
 before_script:
 - apk add --no-cache python py2-pip
 - pip install --no-cache-dir docker-compose
-- docker info &&  docker-compose -v && docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
+- docker info &&  docker-compose -v && docker login -u gitlab-ci-token -p kxrRs1wz4z1gs9ATNYcQ registry.gitlab.com
 
 build:
   stage: build
