--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -96,8 +96,8 @@ image: docker:stable
 
 stages:
 - build
-- release
-- deploy
+# - release
+# - deploy
 
 # When using dind, it's wise to use the overlayfs driver for
 # improved performance.
@@ -111,8 +111,9 @@ services:
 - docker:dind
 
 before_script:
-- apk add --no-cache python py2-pip
-- pip install --no-cache-dir docker-compose
+- apk add python py2-pip
+# - apk add --no-cache python py2-pip
+- pip install docker-compose
 - docker info &&  docker-compose -v && docker login -u gitlab-ci-token -p kxrRs1wz4z1gs9ATNYcQ registry.gitlab.com
 
 build:
