--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -114,7 +114,8 @@ before_script:
 - apk add --no-cache python py2-pip
 # - apk add --no-cache python py2-pip
 - pip install --no-cache-dir docker-compose
-- docker info &&  docker-compose -v && docker login -u gitlab-ci-token -p kxrRs1wz4z1gs9ATNYcQ registry.gitlab.com
+- docker info && docker-compose -v
+- docker login -u gitlab-ci-token -p kxrRs1wz4z1gs9ATNYcQ registry.gitlab.com
 
 build:
   stage: build
