--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -123,4 +123,6 @@ build:
     # - time docker-compose build | tee docker-build.log
     # - docker tag rotopros-web $CONTAINER_STAGING_IMAGE
     - docker pull $CONTAINER_STAGING_IMAGE
-    - docker container restart RotoPros_Web
+    - docker container ls
+    - docker container restart 3604a73fd21c
+    #- docker container restart RotoPros_Web
