--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,5 +124,4 @@ build:
     # - docker tag rotopros-web $CONTAINER_STAGING_IMAGE
     - docker pull $CONTAINER_STAGING_IMAGE
     - docker container ls
-    - docker container restart 3604a73fd21c
-    #- docker container restart RotoPros_Web
+    - docker container restart RotoPros_Web
