--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,7 +120,7 @@ build:
   stage: build
   script:
     # - docker-compose down
-    - docker pull $CONTAINER_STAGING_IMAGE || true
+    # - docker pull $CONTAINER_STAGING_IMAGE || true
     - docker build --cache-from rotopros-web:latest --tag rotopros-web:latest -f web.dockerfile .
     #- time docker-compose build | tee docker-build.log
     - docker tag rotopros-web $CONTAINER_STAGING_IMAGE
