--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build:client-and-server-bundles:dev": "ng build --prod --configuration=staging && ng run roto-pros-web:server",
     "build:client-and-server-bundles": "ng build --prod && ng run roto-pros-web:server",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
-    "deploy:dev": "bash gitlab_docker.sh",
+    "deploy:dev": "npm run build:ssr:dev",
     "deploy": "npm run build:ssr",
     "predocker:taillogs": "echo Web Server Logs:",
     "prod": "nodemon dist/server.js"
