--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular.io-example": {
+    "roto-pros-web": {
       "root": "",
       "projectType": "application",
       "architect": {
@@ -44,9 +44,9 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/c3/c3.min.js",
               "src/assets/js/jquery.js",
               "node_modules/moment/min/moment.min.js",
+              "node_modules/c3/c3.min.js",
               "src/assets/js/bootstrap.min.js",
               "src/assets/js/owl.carousel.min.js",
               "src/assets/js/jquery.mCustomScrollbar.concat.min.js",
@@ -54,11 +54,10 @@
               "src/assets/js/function.js",
               "src/assets/js/bootstrap-slider.min.js",
               "src/assets/js/main.js",
-
               "node_modules/datatables.net/js/jquery.dataTables.js",
               "node_modules/datatables.net-bs/js/dataTables.bootstrap.js",
               "node_modules/datatables.net-responsive/js/dataTables.responsive.js",
-              "src/assets/newAdmin/js/datetime-moment.js"
+              "src/assets/js/admin/datetime-moment.js"
             ]
           },
           "configurations": {
@@ -78,24 +77,44 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ]
+            },
+            "staging": {
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": false,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.ts"
+                }
+              ]
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular.io-example:build"
+            "browserTarget": "roto-pros-web:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular.io-example:build:production"
+              "browserTarget": "roto-pros-web:build:production"
+            },
+            "staging": {
+              "browserTarget": "roto-pros-web:build:staging"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular.io-example:build"
+            "browserTarget": "roto-pros-web:build"
           }
         },
         "test": {
@@ -107,6 +126,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [],
             "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "src/styles.css"
             ],
             "assets": [
@@ -145,7 +167,7 @@
         }
       }
     },
-    "angular.io-example-e2e": {
+    "roto-pros-web-e2e": {
       "root": "",
       "projectType": "application",
       "cli": {},
@@ -155,7 +177,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "angular.io-example:serve"
+            "devServerTarget": "roto-pros-web:serve"
           }
         },
         "lint": {
